--- a/index.html
+++ b/index.html
@@ -10,5 +10,16 @@
 
     <h1>Abdi Zamed</h1>
     
+    <ul>
+       <li>no friends</li>
+    </ul>
+
+    <ol>
+        <li>Chicken Burger</li>
+        <li>Fish Burger</li>
+        <li>Broast</li>
+    </ol>
+
+
 </body>
 </html>
