--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goobsan</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <h1>Abdi Zamed</h1>
-    
+    <h1>My First Web page</h1>
+    <h2>Header 2</h2>
+    <p>Hello World</p>
+    <p>Welcome to <em>strong page</em></p>
+
+
     <ul>
-       <li>no friends</li>
+        <li>JavaScript</li>
+        <li>Angular</li>
+        <li>React</li>
+        <li>Node Js</li>
     </ul>
-
-    <ol>
-        <li>Chicken Burger</li>
-        <li>Fish Burger</li>
-        <li>Broast</li>
-    </ol>
-
-
 </body>
 </html>
